Sass structure refactor

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,17 +2,21 @@
 // Variables
 // ------------------------------------------------------------
 
+
+
+// --- Colors ---
+
 $color__brand: #5da8ef;
-// $color__primary: darkblue;
-// $color__secondary: darkcyan;
-// $color__accent: darkgreen;
 
 $color__text: #333;
 
 
+
+
+// --- typography ---
+
 $font-family__primary: 'Poppins', sans-serif;
 $font-family__secondary: 'Playfair Display';
-
 
 $font-weight__thin: 100;
 $font-weight__normal: 400;
