--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,4 @@
-@import './partials/abstracts';
-@import './partials/base';
+@import './abstracts/variables';
+@import './base/base';
+@import './base/typography';
+
