--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -18,7 +18,8 @@ $color__text: #333;
 $font-family__primary: 'Poppins', sans-serif;
 $font-family__secondary: 'Playfair Display';
 
-$font-weight__thin: 100;
+
+$font-weight__light: 300;
 $font-weight__normal: 400;
 $font-weight__bold: 700;
 
