--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -25,7 +25,8 @@ h1, h2, h3, h4, h5, h6 {
     color: $color__text;
 }
 
-p {
-    color: $color__brand;
+a {
+    color: $color__text--link;
+    text-decoration: none;
 }
 
