--- a/src/styles/layout/_page.scss
+++ b/src/styles/layout/_page.scss
@@ -2,3 +2,9 @@
 // Page Layout
 // ------------------------------------------------------------
 
+.page {
+    &__header {
+        margin-bottom: 45px;
+    }
+}
+
