--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import './abstracts/variables';
+@import './abstracts/mixins';
 
 @import './base/base';
 @import './base/typography';
@@ -9,3 +10,5 @@
 @import './layout/footer';
 
 @import './modules/nav';
+@import './modules/logo';
+
