--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -26,7 +26,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 a {
-    color: $color__text--link;
+    color: $color__link;
     text-decoration: none;
+
+    &:hover {
+        color: $color__brand;
+    }
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
 
