--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,4 +11,7 @@
 
 @import './modules/nav';
 @import './modules/logo';
+@import './modules/hero';
+@import './modules/info-block';
 
+// PUNE flex-basis: 0; ....... 
