--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -7,10 +7,14 @@
 // --- Colors ---
 
 $color__brand: #5da8ef;
+$color__brand--dark: #1576d1;
 
 
+$color__text--light: #757575;
 $color__text: #333;
-$color__text--link: #0b0c11;
+
+
+$color__link: #0b0c11;
 
 
 
@@ -20,9 +24,14 @@ $font-family__primary: 'Poppins', sans-serif;
 $font-family__secondary: 'Playfair Display';
 
 
+$font-weight__lightest: 100;
+$font-weight__lighter: 200;
 $font-weight__light: 300;
 $font-weight__normal: 400;
+$font-weight__semibold: 600;
 $font-weight__bold: 700;
+$font-weight__extrabold: 800;
+$font-weight__boldest: 900;
 
 
 
