--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,5 +13,6 @@
 @import './modules/logo';
 @import './modules/hero';
 @import './modules/info-block';
+@import './modules/quote';
+@import './modules/vertical-line';
 
-// PUNE flex-basis: 0; ....... 
