--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,3 +1,9 @@
 // ------------------------------------------------------------
 // Footer Layout
 // ------------------------------------------------------------
+
+
+
+.footer {
+    height: 400px;
+}
