--- a/src/styles/modules/_info-block.scss
+++ b/src/styles/modules/_info-block.scss
@@ -6,7 +6,7 @@
 
 .info-block {
     &__title {
-        font-size: 29px;
+        font-size: 37px;
         margin-bottom: 20px;
 
         &--underline {
@@ -45,3 +45,22 @@
     }
 }
 
+
+
+//
+// Tablet
+// ______________________________
+
+@media screen and (max-width: $media__l) {
+
+    .info-block {
+        &__title {
+            &--underline {
+                &::after {
+                    content: none;
+                    // display: none;
+                }
+            }
+        }
+    }
+}
