--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -5,7 +5,7 @@
 
 %uppercase {
     text-transform: uppercase;
-    letter-spacing: 3px;
+    letter-spacing: 0.3rem;
     font-weight: $font-weight__bold;
 }
 
