--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -9,6 +9,8 @@
 $color__brand: #5da8ef;
 $color__brand--dark: #1576d1;
 
+$color__board-background: #ededed;
+
 
 $color__text--light: #757575;
 $color__text: #333;
@@ -18,26 +20,32 @@ $color__link: #0b0c11;
 
 
 
+$color__purple--light: #CE60A8;
+$color__purple: #930053;
+
+
+
 // --- typography ---
 
 $font-family__primary: 'Poppins', sans-serif;
 $font-family__secondary: 'Playfair Display';
 
 
-$font-weight__lightest: 100;
-$font-weight__lighter: 200;
-$font-weight__light: 300;
-$font-weight__normal: 400;
-$font-weight__semibold: 600;
-$font-weight__bold: 700;
-$font-weight__extrabold: 800;
-$font-weight__boldest: 900;
+$font-weight__lightest:         100;
+$font-weight__lighter:          200;
+$font-weight__light:            300;
+$font-weight__normal:           400;
+$font-weight__semibold--thin:   500;
+$font-weight__semibold--thick:  600;
+$font-weight__bold:             700;
+$font-weight__bolder:           800;
+$font-weight__boldest:          900;
 
 
 
 // --- media ---
 
-$media__s: 576px;
-$media__m: 768px;
-$media__l: 992px;
+$media__s:  576px;
+$media__m:  768px;
+$media__l:  992px;
 
