--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,5 +14,6 @@
 @import './modules/hero';
 @import './modules/info-block';
 @import './modules/quote';
-@import './modules/vertical-line';
-
+@import './modules/separator';
+@import './modules/showcase';
+@import './modules/board-tile';
