--- a/src/styles/modules/_hero.scss
+++ b/src/styles/modules/_hero.scss
@@ -6,19 +6,19 @@
 .hero {
     display: flex;
 
-    &__text-container {
+    &__body {
         position: relative;
         display: flex;
         flex: 1;
     }
     &__text {
         position: absolute;
-        top: 65px;
-        padding: 20px;
+        top: 6.5rem;
+        padding: 2rem;
         background-color: rgba(255, 255, 255, 0.4);
-        width: 700px;
+        width: 70rem;
     }
-    &__image-container {
+    &__media {
         display: flex;
         flex: 5;
     }
@@ -38,7 +38,7 @@
             width: 100%;
             position: static;
             text-align: center;
-            margin-bottom: 45px;
+            margin-bottom: 4.5rem;
         }
     }
 }
