--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -23,6 +23,7 @@ $color__link: #0b0c11;
 $color__purple--light: #CE60A8;
 $color__purple: #930053;
 
+$color__red--dark: #932020;
 
 
 // --- typography ---
@@ -45,6 +46,7 @@ $font-weight__boldest:          900;
 
 // --- media ---
 
+$media__xs: 480px;
 $media__s:  576px;
 $media__m:  768px;
 $media__l:  992px;
