--- a/src/styles/modules/_showcase.scss
+++ b/src/styles/modules/_showcase.scss
@@ -39,6 +39,8 @@
 @media screen and (max-width: $media__s) {
 
     .showcase {
+        margin-bottom: 22rem;
+
         &__body {
             position: absolute;
             width: 100%;
