--- a/src/styles/modules/_info-block.scss
+++ b/src/styles/modules/_info-block.scss
@@ -44,6 +44,10 @@
             color: $color__brand--dark;
         }
     }
+
+    &--centered {
+        text-align: center;
+    }
 }
 
 
@@ -80,6 +84,7 @@
             font-size: 1rem;
         }
         &__description {
+            margin-bottom: 1.5rem;
             font-size: 1.4rem;
         }
         &__link {
