Added subscribe area

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -25,6 +25,10 @@ $color__purple: #930053;
 
 $color__red--dark: #932020;
 
+$color__grey--light: #ededed;
+
+$color__white: #fff;
+
 
 // --- typography ---
 
