--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,3 +18,6 @@
 @import './modules/showcase';
 @import './modules/board-tile';
 @import './modules/carousel';
+@import './modules/article';
+@import './modules/subscribe';
+@import './modules/footer-article';
