--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -5,5 +5,21 @@
 
 
 .footer {
-    height: 40rem;
+    text-align: center;
+
+    &__logo {
+        margin-bottom: 2rem;
+    }
+
+    &__nav {
+        margin-bottom: 4.5rem;
+    }
+
+    &__social-icons {
+        display: flex;
+        justify-content: space-between;
+        max-width: 20rem;
+        margin: 0 auto;
+    }
 }
+
