--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $color__brand--dark: #1576d1;
 $color__board-background: #ededed;
 
 
+$color__text--lightest: #d9d9d9;
 $color__text--lighter:  #bfbfbf;
 $color__text--light:    #757575;
 $color__text:           #333;
