--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,7 +9,7 @@
 
 ::selection {
     background-color: $color__brand;
-    color: #000;
+    color: $color__black;
 }
 
 *, *::before, *::after {
@@ -30,16 +30,41 @@ body {
         family: $font-family__primary;
         size: 1.6rem;
     }
+
+    &.modal-open {
+        height: 100vh;
+        overflow-y: hidden;
+        padding-right: 1.5rem; /* Avoid width reflow */
+    }
 }
+
+template {
+    display: none;
+}
+
+[hidden] {
+    display: none !important;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+ul, ol {
+    list-style-type: none;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 
 h1, h2, h3, h4, h5, h6 {
     font-family: $font-family__secondary;
     font-weight: $font-weight__bold;
     color: $color__text;
-}
-
-ul, ol {
-    list-style-type: none;
 }
 
 
@@ -63,9 +88,5 @@ a {
 
 
 
-img {
-    max-width: 100%;
-    height: auto;
-}
 
 
