--- a/src/styles/modules/_info-block.scss
+++ b/src/styles/modules/_info-block.scss
@@ -1,5 +1,5 @@
 // ------------------------------------------------------------
-// General / Grid
+// Info Block
 // ------------------------------------------------------------
 
 
@@ -74,7 +74,7 @@
         z-index: -1;
         top: -10.9rem;
         font-size: 12.5rem;
-        font-weight: $font-weight__semibold--thin;
+        font-weight: $font-weight__semibold--light;
         color: rgba(237, 237, 237, 0.4);
     }
 
