--- a/src/styles/modules/_separator.scss
+++ b/src/styles/modules/_separator.scss
@@ -1,5 +1,5 @@
 // ------------------------------------------------------------
-// General / Grid
+// Separator Block
 // ------------------------------------------------------------
 
 .separator {
@@ -12,16 +12,6 @@
         background-color: $color__brand;
     }
 }
-
-
-
-
-//
-// Tablet
-// ______________________________
-
-@media screen and (max-width: $media__l) {}
-
 
 
 
