--- a/src/styles/modules/_article.scss
+++ b/src/styles/modules/_article.scss
@@ -1,5 +1,5 @@
 // ------------------------------------------------------------
-// Board Tile
+// Article Block
 // ------------------------------------------------------------
 
 
