--- a/src/styles/modules/_board-tile.scss
+++ b/src/styles/modules/_board-tile.scss
@@ -1,5 +1,5 @@
 // ------------------------------------------------------------
-// Board Tile
+// Board Tile Block
 // ------------------------------------------------------------
 
 
