--- a/src/styles/modules/_hero.scss
+++ b/src/styles/modules/_hero.scss
@@ -1,5 +1,5 @@
 // ------------------------------------------------------------
-// Hero Section
+// Hero Block
 // ------------------------------------------------------------
 
 
