--- a/src/styles/modules/_showcase.scss
+++ b/src/styles/modules/_showcase.scss
@@ -1,5 +1,5 @@
 // ------------------------------------------------------------
-// Showcase
+// Showcase Block
 // ------------------------------------------------------------
 
 
