--- a/src/styles/modules/_social.scss
+++ b/src/styles/modules/_social.scss
@@ -1,5 +1,5 @@
 // ------------------------------------------------------------
-// Social
+// Social Icons Block
 // ------------------------------------------------------------
 
 
