--- a/src/styles/modules/_carousel.scss
+++ b/src/styles/modules/_carousel.scss
@@ -9,9 +9,9 @@
 
     &__cell {
         width: calc(100% / 3);
-        max-height: 400px;
-        margin-right: 10px;
-        border-radius: 5px;
+        max-height: 40rem;
+        margin-right: 1rem;
+        border-radius: 0.5rem;
         counter-increment: gallery-cell;
     }
 }
@@ -20,15 +20,15 @@
 
 .flickity-prev-next-button {
     top: 67%;
-    width: 30px;
-    height: 30px;
-    border-radius: 5px;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 0.5rem;
 
     &.previous {
-        left: -40px;
+        left: -4rem;
     }
     &.next {
-        right: -40px;
+        right: -4rem;
     }
     &.no-svg {
         color: white;
