--- a/src/styles/modules/_carousel.scss
+++ b/src/styles/modules/_carousel.scss
@@ -14,6 +14,14 @@
         border-radius: 0.5rem;
         counter-increment: gallery-cell;
     }
+
+    &__shadow {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: -10rem;
+        z-index: -1;
+    }
 }
 
 
@@ -41,6 +49,11 @@
 
 .flickity-button {
     color: $color__text--light;
+    background: none;
+
+    &:hover {
+        background: none;
+    }
 }
 
 .flickity-page-dots {
